--- a/front-end/src/app/lista-contatos/lista-contatos.component.html
+++ b/front-end/src/app/lista-contatos/lista-contatos.component.html
@@ -1,13 +1,6 @@
 <div>
 
-  <div *ngIf="notificationService.notifications$ | async as notifications">
-    <div *ngFor="let notification of notifications" class="{{ notification.type }}">
-      {{ notification.message }}
-      <button (click)="notificationService.hideNotification(notification.message)">X</button>
-    </div>
-  </div>
-
-<!--  <app-notification *ngFor="let notification of notifications$ | async" [notification]="notification"></app-notification>-->
+  <app-notification *ngFor="let notification of notifications$ | async" [notification]="notification"></app-notification>
 
   <h2>Lista de Contatos</h2>
 
