feat: Agenda Foi alterado a obrigatoriedade de campos do cadastro e a lógica de inserção e validação apenas pelo CPF, não mais é validado o CNPJ deixando apenas como campo complementar.
#Ajuste no retorno das mensagens de erro.
#Ajuste no layout das mensagens de erro.

Frontend:

API Java:
*AgendaModel.java
*AgendaController.java

Estas alterações visam melhorar a mexperiencia dousuário e visualização de mensagens de erro.

--- a/front-end/src/app/notification/notification.component.scss
+++ b/front-end/src/app/notification/notification.component.scss
@@ -8,6 +8,7 @@
   padding: 10px;
   max-width: 300px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: visibility 0s, opacity 0.5s linear; //não funcionou
 }
 
 .success {
